[gd_scene load_steps=6 format=3 uid="uid://q3j51gm2j783"]

[ext_resource type="Script" uid="uid://b3b6nfr3fv5" path="res://Scenes/Game/Game.gd" id="1_ln2h6"]
[ext_resource type="Texture2D" uid="uid://h50kc7m7imwt" path="res://assets/GameBg.png" id="1_rdw05"]
[ext_resource type="PackedScene" uid="uid://4shceee8mswx" path="res://Scenes/Paddle/Paddle.tscn" id="2_gwu2e"]
[ext_resource type="AudioStream" uid="uid://du43mu06dwa4o" path="res://assets/bgm_action_5.mp3" id="4_ln2h6"]
[ext_resource type="AudioStream" uid="uid://dd2ghlnrcw3k4" path="res://assets/spell1_0.wav" id="5_y3kpf"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ln2h6")

[node name="BG" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_rdw05")
centered = false

[node name="Paddle" parent="." instance=ExtResource("2_gwu2e")]
position = Vector2(572, 574)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ln2h6")
volume_db = -15.0
autoplay = true

[node name="Score Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_y3kpf")
volume_db = -15.0

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 34.0
offset_top = 35.0
offset_right = 89.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0.496328, 0.658671, 1, 1)
theme_override_font_sizes/font_size = 48
text = "000"

[connection signal="area_entered" from="Paddle" to="." method="_on_paddle_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
